data/all_generated_tests/raw_wast_tests/nop_UnreachableCodeExecution_215.wast
;; 6. **Test 6**:     - Description: Validate a `call` instruction that directly precedes a `nop` within a loop where early loop termination triggers `unreachable`. This tests if `nop` near calls interfere with control flow.    - Constraint: Checking that `nop` surrounding calls does not inadvertently affect the loop termination leading to `unreachable`.

(assert_invalid
  (module
    (func $test (param i32) (result i32)
      (loop (result i32)
        (call $dummy)
        (nop)
        (unreachable)
      )
    )
    (func $dummy (result i32) (i32.const 0))
  )
  "type mismatch"
)